--- a/src/sass/variables-site/_colors.scss
+++ b/src/sass/variables-site/_colors.scss
@@ -1,20 +1,25 @@
-$color__background-body: #fff;
+$color__background-body: #27262c;
+$color__background-hr: #fff;
+$color__background-input: #2d2b34;
+$color__background-button: transparent;
+
+$color__background-pre: #5d5c61;
+$color__background-ins: #5d5c4e;
+
+$color__text-main: #fff;
+$color__text-input: #585566;
+$color__text-input-focus: #585566;
+
+$color__link: #beb4db;
+$color__link-visited: #beb4db;
+$color__link-hover: darken( #beb4db, 15% );
+
+$color__border-button: #fff;
+$color__border-button-hover: #fff;
+$color__border-button-focus: #fff;
+$color__border-input: #212026;
+$color__border-abbr: #beb4db;
+
+/* Screen reader focus colors */
 $color__background-screen: #f1f1f1;
-$color__background-hr: #ccc;
-$color__background-button: #e6e6e6;
-$color__background-pre: #eee;
-$color__background-ins: #fff9c0;
-
 $color__text-screen: #21759b;
-$color__text-input: #666;
-$color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
-
-$color__border-button: #ccc #ccc #bbb;
-$color__border-button-hover: #ccc #bbb #aaa;
-$color__border-button-focus: #aaa #bbb #bbb;
-$color__border-input: #ccc;
-$color__border-abbr: #666;
