--- a/src/sass/variables-site/_typography.scss
+++ b/src/sass/variables-site/_typography.scss
@@ -1,4 +1,6 @@
-$font__main: sans-serif;
+@import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic,700italic,400,700);
+
+$font__main: Vollkorn, serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
