--- a/src/sass/typography/_headings.scss
+++ b/src/sass/typography/_headings.scss
@@ -1,3 +1,18 @@
 h1, h2, h3, h4, h5, h6 {
-	clear: both;
+	font-family: $font__header;
 }
+
+h1 {
+	@include font-size( 4.8 );
+}
+
+h2 {
+	@include font-size( 3.6 );
+}
+
+h3 {
+	font-family: $font__main;
+	@include font-size( 1.8 );
+}
+
+
