--- a/src/sass/variables-site/_typography.scss
+++ b/src/sass/variables-site/_typography.scss
@@ -1,6 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic,700italic,400,700);
+@import url(http://fonts.googleapis.com/css?family=Playfair+Display:700,700italic);
 
 $font__main: Vollkorn, serif;
+$font__header: "Playfair Display", serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
