Remove unused files, add _index and _single

--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -1,14 +1,12 @@
-// @import "../layout/content-sidebar";
-// @import "../layout/sidebar-content";
 /*--------------------------------------------------------------
 10.1 Posts and pages
 --------------------------------------------------------------*/
-@import "primary/posts-and-pages";
+@import "primary/index";
 
 /*--------------------------------------------------------------
-10.2 Asides
+10.2 Single
 --------------------------------------------------------------*/
-@import "primary/asides";
+@import "primary/single";
 
 /*--------------------------------------------------------------
 10.3 Comments
