--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -1,3 +1,5 @@
+@import "../layout/full-width";
+
 /*--------------------------------------------------------------
 10.1 Posts and pages
 --------------------------------------------------------------*/
