style navigation, ignoring submenus, see #1

--- a/src/sass/typography/_headings.scss
+++ b/src/sass/typography/_headings.scss
@@ -23,6 +23,7 @@ h4 {
 	position: relative;
 	margin-bottom: $size__spacing - 10;
 	padding-bottom: $size__spacing;
+	line-height: 1;
 	text-align: center;
 	border-bottom: 1px solid $color__text-main;
 
