--- a/src/sass/navigation/_menus.scss
+++ b/src/sass/navigation/_menus.scss
@@ -1,63 +1,43 @@
 .main-navigation {
 	clear: both;
 	display: block;
-	float: left;
+	margin: 20px 0 40px;
 	width: 100%;
+	text-align: center;
 
 	ul {
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
-
-		ul {
-			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-			float: left;
-			position: absolute;
-			top: 1.5em;
-			left: -999em;
-			z-index: 99999;
-
-			ul {
-				left: -999em;
-				top: 0;
-			}
-
-			li {
-				&:hover > ul {
-					left: 100%;
-				}
-			}
-
-			a {
-				width: 200px;
-			}
-
-			:hover > a {
-			}
-
-			a:hover {
-			}
-		}
-
-		li:hover > ul {
-			left: auto;
-		}
 	}
+
 	li {
-		float: left;
+		display: inline-block;
 		position: relative;
-
-		&:hover > a {
-		}
 	}
-	a {
+
+	a, a:visited {
 		display: block;
+		padding: 5px 8px;
+		text-transform: uppercase;
 		text-decoration: none;
+		color: $color__text-main;
+	}
+
+	a:hover,
+	a:focus {
+		color: $color__link;
+	}
+
+	a:focus {
+		outline: none;
+		text-decoration: underline;
 	}
 
 	.current_page_item > a,
 	.current-menu-item > a,
 	.current_page_ancestor > a {
+		color: $color__link;
 	}
 }
 
