--- a/src/sass/layout/_full-width.scss
+++ b/src/sass/layout/_full-width.scss
@@ -5,3 +5,10 @@
 }
 
 /* Widgets layout */
+
+.widget-area .widget {
+	display: inline-block;
+	vertical-align: top;
+	width: 1/3 * 100%;
+	padding: 40px;
+}
