--- a/src/sass/variables-site/_colors.scss
+++ b/src/sass/variables-site/_colors.scss
@@ -7,6 +7,8 @@ $color__background-pre: #5d5c61;
 $color__background-ins: #5d5c4e;
 
 $color__text-main: #fff;
+$color__text-widget: #dddae5;
+$color__text-widget-title: #e0dbec;
 $color__text-input: #585566;
 $color__text-input-focus: #585566;
 
