Add quote style

--- a/src/sass/typography/_copy.scss
+++ b/src/sass/typography/_copy.scss
@@ -12,6 +12,23 @@ dfn, cite, em, i {
 
 blockquote {
 	margin: 0 1.5em;
+	font-style: italic;
+	quotes: '\201c' "'";
+	p:first-of-type:before { content: open-quote; }
+}
+
+cite {
+	font-weight: bold;
+	&:before {
+		content: '\2015';
+		font-weight: normal;
+	}
+}
+
+q {
+	quotes: '\201c' '\201d';
+	&:before { content: open-quote }
+	&:after { content: close-quote }
 }
 
 address {
