Add front page styles

--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -8,6 +8,7 @@
 /*--------------------------------------------------------------
 10.2 Single
 --------------------------------------------------------------*/
+@import "primary/front-page";
 @import "primary/single";
 
 /*--------------------------------------------------------------
