Remove :visited styles which override general a styles

--- a/src/sass/typography/_headings.scss
+++ b/src/sass/typography/_headings.scss
@@ -28,7 +28,7 @@ h4 {
 	text-align: center;
 	border-bottom: 1px solid $color__text-main;
 
-	a, a:visited {
+	a {
 		color: $color__text-main;
 		text-decoration: none;
 	}
