--- a/src/sass/forms/_buttons.scss
+++ b/src/sass/forms/_buttons.scss
@@ -2,36 +2,36 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: $color__border-button;
-	@include border-radius(3px);
-	background: $color__background-button;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
-	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
 	-webkit-appearance: button; /* Corrects inability to style clickable 'input' types in iOS */
-	@include font-size(1.2);
+}
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+a.puerco-button {
+	padding: 8px 15px 5px;
+
+	@include font-size( 2.0 );
 	line-height: 1;
-	padding: .6em 1em .4em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-}
+	font-weight: 700;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: $color__text-button;
+	border: 2px solid $color__border-button;
+	background-color: $color__background-button;
+	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
 
-button:hover,
-input[type="button"]:hover,
-input[type="reset"]:hover,
-input[type="submit"]:hover {
-	border-color: $color__border-button-hover;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
-}
+	transition: all 0.3s;
 
-button:focus,
-input[type="button"]:focus,
-input[type="reset"]:focus,
-input[type="submit"]:focus,
-button:active,
-input[type="button"]:active,
-input[type="reset"]:active,
-input[type="submit"]:active {
-	border-color: $color__border-button-focus;
-	box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
+	&:focus,
+	&:hover {
+		color: $color__text-button-hover;
+		background-color: $color__background-button-hover;
+	}
+
+	&:active {
+		color: $color__text-button-active;
+		background-color: $color__background-button-active;
+	}
 }
