--- a/src/sass/layout/_full-width.scss
+++ b/src/sass/layout/_full-width.scss
@@ -11,4 +11,12 @@
 	vertical-align: top;
 	width: 1/3 * 100%;
 	padding: 40px;
+
+	&:nth-of-type(3n+1) {
+		padding-left: 0;
+	}
+
+	&:nth-of-type(3n) {
+		padding-right: 0;
+	}
 }
