--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -15,3 +15,8 @@
 10.3 Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+10.4 Footer
+--------------------------------------------------------------*/
+@import "primary/footer";
