--- a/src/sass/site/primary/_index.scss
+++ b/src/sass/site/primary/_index.scss
@@ -1,25 +1,19 @@
-.sticky {
-	display: block;
-}
+.sticky {/*! @todo */}
 
 .hentry {
-	margin: 0 0 1.5em;
+	margin: 0 0 $size__spacing;
 }
 
-.byline,
-.updated:not(.published){
-	display: none;
-}
+.entry-title, .read-more {
+	a {
+		color: white;
+		text-decoration: none;
 
-.single .byline,
-.group-blog .byline {
-	display: inline;
-}
-
-.page-content,
-.entry-content,
-.entry-summary {
-	margin: 1.5em 0 0;
+		&:hover, &:active, &:focus {
+			color: white;
+			text-decoration: underline;
+		}
+	}
 }
 
 .page-links {
