--- a/src/sass/site/primary/_index.scss
+++ b/src/sass/site/primary/_index.scss
@@ -4,18 +4,18 @@
 	margin: 0 0 $size__spacing;
 }
 
-.entry-title, .read-more {
-	a {
-		color: white;
-		text-decoration: none;
+.entry-title a,
+.read-more {
+	color: white;
+	text-decoration: none;
 
-		&:hover, &:active, &:focus {
-			color: white;
-			text-decoration: underline;
-		}
+	&:hover, &:active, &:focus {
+		color: white;
+		text-decoration: underline;
 	}
 }
 
+.read-more,
 .posted-on {
 	font-weight: bold;
 }
