--- a/src/sass/navigation/_links.scss
+++ b/src/sass/navigation/_links.scss
@@ -7,3 +7,38 @@ a {
 		color: $color__link-hover;
 	}
 }
+
+.site-main .comment-navigation,
+.site-main .paging-navigation,
+.site-main .post-navigation {
+	overflow: hidden;
+	margin: 0 0 $size__spacing;
+	padding-bottom: $size__spacing;
+	border-bottom: 1px solid $color__text-main;
+
+	a {
+		color: white;
+		text-decoration: none;
+		font-weight: normal;
+
+		&:hover, &:active, &:focus {
+			color: white;
+			text-decoration: underline;
+		}
+	}
+}
+
+.comment-navigation .nav-previous,
+.paging-navigation .nav-previous,
+.post-navigation .nav-previous {
+	float: left;
+	width: 50%;
+}
+
+.comment-navigation .nav-next,
+.paging-navigation .nav-next,
+.post-navigation .nav-next {
+	float: right;
+	text-align: right;
+	width: 50%;
+}
