--- a/src/sass/site/primary/_index.scss
+++ b/src/sass/site/primary/_index.scss
@@ -6,13 +6,7 @@
 
 .entry-title a,
 .read-more {
-	color: white;
-	text-decoration: none;
-
-	&:hover, &:active, &:focus {
-		color: white;
-		text-decoration: underline;
-	}
+	@include white-link;
 }
 
 .read-more,
