--- a/src/sass/site/primary/footer.scss
+++ b/src/sass/site/primary/footer.scss
@@ -10,12 +10,7 @@
 	}
 
 	a {
+		@include white-link;
 		color: $color__text-footer;
-		text-decoration: none;
-	}
-
-	a:hover, a:focus {
-		outline: none;
-		text-decoration: underline;
 	}
 }
