--- a/src/sass/forms/_fields.scss
+++ b/src/sass/forms/_fields.scss
@@ -26,18 +26,16 @@ input[type="url"],
 input[type="password"],
 input[type="search"],
 textarea {
+	line-height: 1;
+	background-color: $color__background-input;
 	color: $color__text-input;
 	border: 1px solid $color__border-input;
-	@include border-radius(3px);
-}
+	box-shadow: inset 5px 5px 5px rgba( $color__background-body, 0.05 );
 
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="password"]:focus,
-input[type="search"]:focus,
-textarea:focus {
-	color: $color__text-input-focus;
+	&:focus {
+		color: $color__text-input-focus;
+		outline-color: $color__border-input;
+	}
 }
 
 input[type="text"],
@@ -45,12 +43,32 @@ input[type="email"],
 input[type="url"],
 input[type="password"],
 input[type="search"] {
-	padding: 3px;
+	padding: 20px;
 }
 
 textarea {
 	overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9 */
-	padding-left: 3px;
+	padding: 20px;
 	vertical-align: top; /* Improves readability and alignment in all browsers */
 	width: 100%;
+	resize: vertical;
+	line-height: 1.6;
+}
+
+label {
+	margin-bottom: 5px;
+	font-weight: bold;
+}
+
+
+::-webkit-input-placeholder {
+	color: $color__text-placeholder;
+}
+
+::-moz-placeholder {
+	color: $color__text-placeholder;
+}
+
+:-ms-input-placeholder {
+	color: $color__text-placeholder;
 }
