--- a/src/sass/site/primary/_single.scss
+++ b/src/sass/site/primary/_single.scss
@@ -42,14 +42,8 @@
 	font-weight: bold;
 
 	a {
-		color: white;
-		text-decoration: none;
 		font-weight: normal;
-
-		&:hover, &:active, &:focus {
-			color: white;
-			text-decoration: underline;
-		}
+		@include white-link;
 	}
 
 	&.format-link span {
