--- a/src/sass/variables-site/_colors.scss
+++ b/src/sass/variables-site/_colors.scss
@@ -12,8 +12,9 @@ $color__text-main: #fff;
 $color__text-widget: #dddae5;
 $color__text-widget-title: #e0dbec;
 $color__text-footer: #dddae5;
-$color__text-input: #585566;
-$color__text-input-focus: #585566;
+$color__text-input: #dddae5;
+$color__text-placeholder: #585566;
+$color__text-input-focus: #dddae5;
 $color__text-button: #fff;
 $color__text-button-hover: #27262c;
 $color__text-button-active: #27262c;
