--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -10,6 +10,7 @@
 --------------------------------------------------------------*/
 @import "primary/front-page";
 @import "primary/single";
+@import "primary/menu";
 
 /*--------------------------------------------------------------
 10.3 Comments
