--- a/src/sass/typography/_headings.scss
+++ b/src/sass/typography/_headings.scss
@@ -65,15 +65,28 @@ h4 {
 	margin-bottom: 10px;
 	@include font-size( 2.4 );
 
-	.menu-page & {
-		margin-bottom: $size__spacing-small;
-		@include font-size( 3.6 );
-	}
-
 	.nova_menu_item & {
 		margin-bottom: 0;
 		font-family: $font__main;
 		@include font-size( 1.8 );
+	}
+}
+
+.menu-group-title {
+	&:hover,
+	&.selected {
+		color: $color__link;
+	}
+
+	&.selected:after {
+		position: absolute;
+		overflow: hidden;
+		left: calc( 50% - 5px ); // 9px wide total
+		bottom: -15px;
+		content: '\2666';
+		line-height: 1;
+		font-size: 18px;
+		height: 16px;
 	}
 }
 
