Add a page template for “Two Column” pages. Most content looks odd at two-columns (especially since pages can contain contact forms, etc), so let’s make the Two Column layout Opt-in.

--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -10,6 +10,7 @@
 --------------------------------------------------------------*/
 @import "primary/front-page";
 @import "primary/single";
+@import "primary/two-col-page";
 @import "primary/menu";
 
 /*--------------------------------------------------------------
