--- a/src/sass/variables-site/_colors.scss
+++ b/src/sass/variables-site/_colors.scss
@@ -25,6 +25,7 @@ $color__link-hover: darken( #beb4db, 15% );
 $color__border-button: #fff;
 $color__border-input: #212026;
 $color__border-abbr: #beb4db;
+$color__border-table: #fff;
 
 /* Screen reader focus colors */
 $color__background-screen: #f1f1f1;
