Add default spacing under all h* tags.

--- a/src/sass/typography/_headings.scss
+++ b/src/sass/typography/_headings.scss
@@ -2,6 +2,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: $font__header;
 	font-weight: 900;
 	font-variant-ligatures: common-ligatures;
+	margin-bottom: 0.333em;
 }
 
 h1 {
