--- a/src/sass/site/primary/_comments.scss
+++ b/src/sass/site/primary/_comments.scss
@@ -7,6 +7,10 @@
 	margin: 0;
 }
 
+.comment-list {
+	margin-bottom: $size__spacing-small * 3;
+}
+
 article.comment-body {
 	position: relative;
 	margin-bottom: 40px;
@@ -15,6 +19,10 @@ article.comment-body {
 
 .comment-content {
 	margin: 0 0 0 34.5%;
+
+	p {
+		margin-bottom: 1em;
+	}
 
 	> *:last-child {
 		margin-bottom: 0;
