The front page should never have a bottom border on the entry, it will always clash with the top border on the widget area (there is nothing between them)

--- a/src/sass/site/primary/_front-page.scss
+++ b/src/sass/site/primary/_front-page.scss
@@ -9,6 +9,11 @@
 		@include font-size( 2.4 );
 	}
 
+	.hentry {
+		border-bottom: none;
+	}
+
+	/* If the entry element has a style, the background's been set. */
 	.hentry[style] {
 		position: relative;
 		display: table;
