Style search and list items in widgets

--- a/src/sass/modules/_accessibility.scss
+++ b/src/sass/modules/_accessibility.scss
@@ -1,10 +1,14 @@
 /* Text meant only for screen readers */
-.screen-reader-text {
+@mixin screen-reader-only {
 	clip: rect(1px, 1px, 1px, 1px);
 	position: absolute !important;
 	height: 1px;
 	width: 1px;
 	overflow: hidden;
+}
+
+.screen-reader-text {
+	@include screen-reader-only;
 
 	&:hover,
 	&:active,
