Front page content shouldn’t collapse (width-wise) when there is no content.

--- a/src/sass/site/primary/_front-page.scss
+++ b/src/sass/site/primary/_front-page.scss
@@ -17,6 +17,7 @@
 	.hentry[style] {
 		position: relative;
 		display: table;
+		width: 100%;
 		height: 80vh;
 		min-height: 300px;
 		max-height: 800px;
