--- a/src/sass/navigation/_menus.scss
+++ b/src/sass/navigation/_menus.scss
@@ -36,8 +36,7 @@
 	}
 
 	.current_page_item > a,
-	.current-menu-item > a,
-	.current_page_ancestor > a {
+	.current-menu-item > a {
 		color: $color__link;
 	}
 }
