Move form styling into _forms, and update search form styling to apply to all search forms, not just widgets.

--- a/src/sass/forms/_forms.scss
+++ b/src/sass/forms/_forms.scss
@@ -10,3 +10,22 @@ textarea {
 @import "buttons";
 
 @import "fields";
+
+.post-password-form {
+	input[type="password"] {
+		margin: 3px 0 13px;
+		width: 100%;
+	}
+}
+
+.search-form {
+	.search-field {
+		width: 100%;
+		box-sizing: border-box;
+	}
+
+	.search-submit {
+		@include screen-reader-only;
+	}
+}
+
