--- a/src/sass/mixins/_mixins-master.scss
+++ b/src/sass/mixins/_mixins-master.scss
@@ -45,3 +45,11 @@
 		text-decoration: underline;
 	}
 }
+
+@mixin screen-reader-only {
+	clip: rect(1px, 1px, 1px, 1px);
+	position: absolute !important;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+}
