Add style for the 404 and no search results pages

--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -13,6 +13,8 @@
 @import "primary/two-col-page";
 @import "primary/menu";
 
+@import "primary/404";
+
 /*--------------------------------------------------------------
 10.3 Comments
 --------------------------------------------------------------*/
