Add an animation to the current menu section diamond, see #6

--- a/src/sass/site/primary/_menu.scss
+++ b/src/sass/site/primary/_menu.scss
@@ -70,3 +70,17 @@
 	}
 }
 
+.menu-group-title {
+	&:after {
+		opacity: 0;
+		transform: scale(2);
+		transition: opacity 0.2s linear,
+		            color 0.2s ease-out,
+		            transform 0.2s ease-out;
+	}
+
+	&.selected:after {
+		opacity: 1;
+		transform: none;
+	}
+}
