Remove test color from active button color variable

--- a/src/sass/variables-site/_colors.scss
+++ b/src/sass/variables-site/_colors.scss
@@ -3,7 +3,7 @@ $color__background-hr: #fff;
 $color__background-input: #2d2b34;
 $color__background-button: transparent;
 $color__background-button-hover: white;
-$color__background-button-active: red;
+$color__background-button-active: white;
 
 $color__background-pre: #5d5c61;
 $color__background-ins: #5d5c4e;
