--- a/src/sass/layout/_full-width.scss
+++ b/src/sass/layout/_full-width.scss
@@ -1,6 +1,7 @@
 
 .site {
 	margin: 0 auto;
+	padding: 0 1em;
 	max-width: $size__site-main;
 }
 
@@ -14,10 +15,36 @@
 	padding: 40px;
 
 	&:nth-of-type(3n+1) {
+		clear: left;
 		padding-left: 0;
 	}
 
 	&:nth-of-type(3n) {
 		padding-right: 0;
+	}
+}
+
+.one-widget .widget {
+	padding-left: 0;
+	padding-right: 0;
+	width: 100%;
+}
+
+.two-widgets .widget {
+	width: 50%;
+
+	&:nth-of-type(2n+1) {
+		padding-left: 0;
+	}
+
+	&:nth-of-type(2n) {
+		padding-right: 0;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.widget-area .widget {
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 }
