--- a/src/sass/site/primary/_front-page.scss
+++ b/src/sass/site/primary/_front-page.scss
@@ -41,3 +41,10 @@
 		}
 	}
 }
+
+@media screen and (max-width: 768px) {
+	.home.page .hentry[style] .entry-content {
+		padding-left: 40px;
+		padding-right: 40px;
+	}
+}
