--- a/src/sass/modules/_infinite-scroll.scss
+++ b/src/sass/modules/_infinite-scroll.scss
@@ -36,6 +36,12 @@
 		padding: 0 0 $size__spacing;
 		background-color: transparent;
 		@include font-size( 1.8 );
+
+		button:hover,
+		button:active,
+		button:focus {
+			color: $color__link;
+		}
 	}
 }
 
