--- a/src/sass/layout/_full-width.scss
+++ b/src/sass/layout/_full-width.scss
@@ -48,3 +48,33 @@
 		padding-right: 20px;
 	}
 }
+
+@media screen and (max-width: 700px) {
+	.widget-area .widget {
+		width: 50%;
+
+		&:nth-of-type(2n+1) {
+			clear: left;
+			padding-left: 0;
+			padding-right: 20px;
+		}
+
+		&:nth-of-type(2n) {
+			padding-left: 20px;
+			padding-right: 0;
+		}
+
+		&:nth-of-type(3n+1) {
+			clear: none;
+		}
+	}
+}
+@media screen and (max-width: 500px) {
+	.widget-area .widget:nth-of-type(n) {
+		float: none;
+		padding-bottom: 0;
+		padding-left: 0;
+		padding-right: 0;
+		width: 100%;
+	}
+}
