--- a/src/sass/site/primary/_comments.scss
+++ b/src/sass/site/primary/_comments.scss
@@ -11,6 +11,19 @@
 	margin-bottom: $size__spacing-small * 3;
 }
 
+.pingback {
+	padding-left: 84px;
+
+	.comment-body {
+		margin-bottom: 40px;
+		font-weight: bold;
+
+		a {
+			font-weight: normal;
+		}
+	}
+}
+
 article.comment-body {
 	position: relative;
 	margin-bottom: 40px;
@@ -108,6 +121,31 @@ article.comment-body {
 		left: 0;
 		margin-top: 1em;
 	}
+
+	.depth-2 {
+		.comment-body {
+			padding-left: 40px;
+		}
+
+		.comment-meta {
+			padding-left: 0;
+		}
+	}
+
+	.depth-3 {
+		.comment-body {
+			padding-left: 80px;
+		}
+
+		.comment-meta {
+			padding-left: 0;
+		}
+	}
+
+	.pingback {
+		padding-left: 0;
+	}
+
 }
 
 /*--------------------------------------------------------------
